<resources>
    <string name="app_name">Moving On</string>
    <string name="entrar">Você é:</string>
    <string name="btnCliente">Cliente</string>
    <string name="btnEmpresa">Empresa/Personal Trainer</string>
    <string name="login">Login:</string>
    <string name="empresa">Empresa</string>
    <string name="cliente">Cliente</string>
    <string name="txtEmail">Coloque seu email:</string>
    <string name="txtPassword">Coloque sua senha:</string>
    <string name="txtConfirmPassword">Confirme sua senha:</string>
    <string name="txtConfirmEmail">Confirme seu email:</string>
    <string name="txtNome">Coloque seu nome:</string>
    <string name="txtEndereco">Endereço:</string>
    <string name="txtUf">UF:</string>
    <string name="txtCep">CEP:</string>
    <string name="btnLogin">Entrar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="goLogin">Já tem registro? Clique aqui e faça login</string>
    <string name="sairConta">Sair</string>
    <string name="perfilCliente">Cliente</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">userName</string>
    <string name="email">Email</string>
    <string name="logado">Logado</string>
    <string name="title_activity_cliente_chat_teste">cliente_chatTeste</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>