<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".empresa.RegisterEmpresa"
    android:background="@color/material_dynamic_neutral60">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backImg"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_backimg" />
        <TextView
            android:id="@+id/txtBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="bold"
            android:textColor="@color/material_dynamic_neutral20"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:padding="3dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empresa"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            app:cardCornerRadius="60dp"
            android:elevation="10dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/ic_launcher"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <EditText
        android:id="@+id/txtNome"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtNome"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/txtPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/txtConfirmPassword"
            android:inputType="textPassword" />
    </LinearLayout>
    <EditText
        android:id="@+id/txtEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/txtConfirmEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtConfirmEmail"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/txtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEndereco"
        android:layout_marginEnd="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/txtCep"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/txtCep"
            android:layout_marginStart="5dp"
            />
        <EditText
            android:id="@+id/txtUf"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/txtUf"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrar"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/goLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goLogin"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        android:gravity="center"
        />
</LinearLayout>