<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".empresa.LoginEmpresa"
    android:background="@color/material_dynamic_neutral60"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_backimg"/>

        <TextView
            android:id="@+id/txtBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tela Inicial"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/material_dynamic_neutral20"
            android:layout_marginTop="13dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="60dp"
            android:elevation="10dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/ic_launcher"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empresa"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="25dp"
            android:textSize="23sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:padding="13dp"
            android:hint="@string/txtEmail"/>

        <EditText
            android:id="@+id/txtPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:padding="13dp"
            android:hint="@string/txtPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:padding="5dp"
                android:text="@string/btnLogin"/>

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:paddingTop="5dp"
                android:text="@string/btnRegistrar"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>