<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".telasCliente.cliente_perfil"
    android:orientation="vertical"
    android:background="#A5A4A4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:background="#7C87C1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/perfilCliente"
            android:textSize="24dp"
            android:textColor="#F6F6F6"
            android:gravity="bottom|center"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#fff">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="60dp"
            android:elevation="10dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/ic_launcher"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <TextView
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sairConta"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"/>

</LinearLayout>